test/compilable/test11292.d
struct S
{
    immutable int x;
    this(this) { x = 1; }
}
